--- a/config/services.yml
+++ b/config/services.yml
@@ -2,22 +2,19 @@ services:
     posey.multiranks.admin.controller:
         class: posey\multiranks\controller\admin_controller
         arguments:
-            - @dbal.conn
-            - @controller.helper
-            - @request
-            - @template
-            - @user
-            - @path_helper
-            - %core.root_path%
-            - %core.php_ext%
+            - '@dbal.conn'
+            - '@request'
+            - '@template'
+            - '@user'
+            - '%core.root_path%'
+            - '%core.php_ext%'
 
     posey.multiranks.listener:
         class: posey\multiranks\event\listener
         arguments:
-            - @controller.helper
-            - @template
-            - @dbal.conn
-            - @config
-            - %core.root_path%
+            - '@template'
+            - '@dbal.conn'
+            - '@config'
+            - '%core.root_path%'
         tags:
             - { name: event.listener }
