--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: required
+
 language: php
 
 matrix:
@@ -16,6 +18,8 @@ matrix:
       env: DB=postgres
     - php: 5.4
       env: DB=sqlite3
+    - php: 5.4
+      env: DB=mysqli;SLOWTESTS=1
     - php: 5.5
       env: DB=mysqli
     - php: 5.6
@@ -28,7 +32,7 @@ matrix:
 
 env:
   global:
-    - EXTNAME="posey/aps"  # CHANGE name of the extension HERE
+    - EXTNAME="MrGoldy/multiranks"  # CHANGE name of the extension HERE
     - SNIFF="1"            # Should we run code sniffer on your code?
     - IMAGE_ICC="1"        # Should we run icc profile sniffer on your images?
     - EPV="1"              # Should we run EPV (Extension Pre Validator) on your code?
@@ -40,8 +44,16 @@ branches:
     - develop
     - /^develop-.*$/
 
+before_install:
+  - sudo mkdir travis
+  - git clone "https://github.com/nickvergessen/phpbb-ext-acme-demo.git"
+  - sudo cp phpbb-ext-acme-demo/phpunit.xml.dist ./
+  - sudo cp phpbb-ext-acme-demo/travis/prepare-phpbb.sh travis
+  - sudo rm -rf phpbb-ext-acme-demo
+  - composer self-update
+
 install:
-  - composer install --dev --no-interaction --prefer-source
+  - composer install --no-interaction --prefer-source
   - travis/prepare-phpbb.sh $EXTNAME $PHPBB_BRANCH
   - cd ../../phpBB3
   - travis/prepare-extension.sh $EXTNAME $PHPBB_BRANCH
