--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 	"time": "2015-11-10",
 	"license": "GPL-2.0",
 	"authors": [{
-			"name": "Gijs Martens",
+			"name": "posey",
 			"email": "admin@godfathertalks.com",
 			"homepage": "http://www.godfathertalks.com",
 			"role": "Lead Developer"
