--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "posey/multiranks",
+	"name": "andares-phpBB-Es/multiranks",
 	"type": "phpbb-extension",
 	"description": "Multi Ranks.Special Edition with 10 ranks",
 	"homepage": "http://www.godfathertalks.com",
