--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 		{
 			"name": "andares",
 			"email": "andares.cat@gmail.com",
-			"homepage": "www.phpbb-es.com",
+			"homepage": "http://www.phpbb-es.com",
 			"role": "Modifier Special Edition 10 ranks"
 		}],
 	"require": {
